ACA-4619: Clean up QuickShareServiceImpl.